--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "dreamstream",
-  "version": "2.1",
+  "version": "2.1.0",
   "description": "A Node.js web app that lists the highest ranked Dota streamers on twitch.tv",
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "puppeteer": "^0.12.0",
-    "request": "^2.87.0",
-    "require": "^2.4.20"
+    "request": "^2.87.0"
   },
   "devDependencies": {},
   "scripts": {
